# MyLibrary

./: CMakeLists.txt  vcpkg.json
MyLibrary/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
ports/mylibrary/: portfile.cmake
vcpkg/: baseline.json
vcpkg/ports/MyLibrary/: portfile.cmake  vcpkg.json
vcpkg/versions/m-/: MyLibrary.json
versions/m-/: mylibrary.json
